[package]
name = "chtholly_tree"
description = "Rust bindings for Chtholly Tree"
repository = "https://github.com/shanmo/chtholly_tree.git"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["interval", "query", "update"]
categories = ["data-structures", "algorithms"]
authors = ["Mo Shan <moshan@ucsd.edu>"]

[dependencies]
